--- a/FORMULARIO_SOLO/styles.css
+++ b/FORMULARIO_SOLO/styles.css
@@ -18,6 +18,7 @@ body{
   fieldset{
     background-color:rgba(27, 27, 50, 0.8);
         border: none;
+        margin:center;
         
   }
   label{
