--- a/FORMULARIO_SOLO/styles.css
+++ b/FORMULARIO_SOLO/styles.css
@@ -3,6 +3,9 @@ body{
     background-size: cover;
        font-family: Tahoma;
       font-size: 16px;
+      width: 100%;
+      height: 100vh;
+      margin: 0;
   }
   h1{
       text-align: center;
