--- a/FORMULARIO_SOLO/styles.css
+++ b/FORMULARIO_SOLO/styles.css
@@ -8,10 +8,12 @@ body{
       margin: 0;
   }
   h1{
+        margin: 1em auto;
       text-align: center;
       color:white
     }
   p{
+    margin: 1em auto;
     text-align: center;
     color:white;
   }
@@ -21,7 +23,7 @@ body{
   fieldset{
     background-color:rgba(27, 27, 50, 0.8);
         border: none;
-        margin:auto;
+      
         padding: 2rem 20;
   }
   label{
@@ -31,7 +33,7 @@ body{
    
   }
     form {
-      width: 70vw;
+      width: 60vw;
       max-width: 500px;
       min-width: 300px;
       margin: 0 auto;
@@ -47,7 +49,7 @@ body{
     }
     .inline {
       width: unset;
-      margin: 0 0.1em  ;
+      margin: 0 0.5em  ;
       vertical-align: middle;
     }
     input[type="submit"] {
