--- a/FORMULARIO_SOLO/styles.css
+++ b/FORMULARIO_SOLO/styles.css
@@ -24,12 +24,11 @@ body{
     background-color:rgba(27, 27, 50, 0.8);
         border: none;
       
-        padding: 2rem 0;
-        border-bottom: 3px;
+        padding: 1rem center;
   }
   label{
     display:block;
-    margin: 0.5rem 0;
+    margin: 0.5rem 20;
     color:white;
    
   }
@@ -50,7 +49,7 @@ body{
     }
     .inline {
       width: unset;
-      margin: 0 0.5em 0 0;
+      margin: 0 0.5em  ;
       vertical-align: middle;
     }
     input[type="submit"] {
