--- a/FORMULARIO_SOLO/styles.css
+++ b/FORMULARIO_SOLO/styles.css
@@ -1,11 +1,12 @@
 body{
+    width: 100%;
+    height: 100vh;
+    margin: 0;
     background-image: linear-gradient( 115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ), url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
-    background-size: cover;
-       font-family: Tahoma;
-      font-size: 16px;
-      width: 100%;
-      height: 100vh;
-      margin: 0;
+
+    font-family: Tahoma;
+    font-size: 16px;
+    
   }
   h1{
         margin: 1em auto;
@@ -25,23 +26,25 @@ body{
         border: none;
       
         padding: 1rem center;
-        margin-left: auto;
-        margin-right: auto;
    
-        max-width: 500px;
+   
+   
   }
   label{
     display:block;
-    margin: 0.5rem 20;
+    margin: 0.5rem 0;
     color:white;
+    padding-left: 35px;
+    padding-right: 10px
    
   }
     form {
       width: 60vw;
-      max-width: 500px;
+      max-width: 700px;
       min-width: 300px;
       margin: 0 auto;
       padding-bottom: 2em;
+      border-radius: 10px;
     }
   
     input,
@@ -50,6 +53,14 @@ body{
       margin: 10px 0 0 0;
       width: 100%;
       min-height: 2em;
+    }
+    input{
+        font-size: 15px;
+        margin: 10px 0 0 0 ;
+        width: 95%;
+        border-radius: 5px;
+        height: 35px;
+        min-height: 2em;
     }
     .inline {
       width: unset;
