--- a/FORMULARIO_SOLO/styless.css
+++ b/FORMULARIO_SOLO/styless.css
@@ -53,6 +53,8 @@ body{
       margin: 10px 0 0 0;
       width: 100%;
       min-height: 2em;
+      padding-left: 35px;
+      padding-right: 10px
     }
     input{
         font-size: 15px;
