--- a/FORMULARIO_SOLO/styless.css
+++ b/FORMULARIO_SOLO/styless.css
@@ -47,14 +47,7 @@ body{
       border-radius: 10px;
     }
   
-    input,
-    textarea,
-    select{
-      margin: 10px 0 0 0;
-      width: 100%;
-      min-height: 2em;
-
-    }
+ 
     input{
         font-size: 15px;
         margin: 10px 0 0 0 ;
@@ -64,20 +57,17 @@ body{
         min-height: 2em;
     }
     textarea{
-      font-size: 15px;
-      margin: 10px 0 0 0 ;
-      width: 95%;
-      border-radius: 5px;
-      height: 35px;
-      min-height: 2em;
+      margin-left: 35px;
+    width: 89%;
+    min-width: 3em;
+    min-height: 2em;
 
     }
     select{
-      font-size: 15px;
       margin: 10px 0 0 0 ;
-      width: 95%;
+      width: 96%;
       border-radius: 5px;
-      height: 35px;
+      height: 40px;
       min-height: 2em;
     }
     
