--- a/FORMULARIO_SOLO/styless.css
+++ b/FORMULARIO_SOLO/styless.css
@@ -24,8 +24,9 @@ body{
   fieldset{
     background-color:rgba(27, 27, 50, 0.8);
         border: none;
+        padding:auto;
       
-        padding: 1rem center;
+ 
    
    
    
