--- a/tributo/stylos1.css
+++ b/tributo/stylos1.css
@@ -1,10 +1,8 @@
 img {
+    max-width: 100%;
     display: block;
-    height: 400px;
+    height: auto;
     margin: 0 auto;
-    width: 900px;
-    margin-top: 50px;
-    margin-bottom: 30px;
 }
 
 body {
@@ -23,6 +21,7 @@ main{
         padding: 15px; 
         border-radius: 50px;
         background: #ACBEBE;
+        display: block;
         
 
 }
