--- a/tributo/stylos1.css
+++ b/tributo/stylos1.css
@@ -12,7 +12,7 @@ img {
 }
 
 
-body {
+#body {
     font-family: "fantasy:Papyrus";
     font-size: 1.6rem;
     line-height: 1.5;
@@ -21,6 +21,9 @@ body {
     margin: 0;
     background-color: #20232A;
     margin-bottom: 0%;
+}
+body{
+    display: block;
 }
 #main{
 
