--- a/tributo/stylos1.css
+++ b/tributo/stylos1.css
@@ -83,3 +83,39 @@ figure{
     font-size: 1.0em;
     margin:50px 0;
 }
+
+label{
+    text-align: left;
+    font-size: 0.8em;
+}
+ul {
+    max-width: 550px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    line-height: 1.6;
+    list-style-type: disc;
+    
+}
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+    margin: 16px 0;
+    line-height: 1.6;
+ 
+}
+
+span{
+    font-weight: bold;
+}
+section {
+    display: block;
+}
+
+::marker {
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    text-transform: none;
+    text-indent: 0px !important;
+    text-align: start !important;
+    text-align-last: start !important;
+}
