--- a/tributo/stylos1.css
+++ b/tributo/stylos1.css
@@ -58,7 +58,14 @@ figure{
     height: auto;
     margin: 0;
     margin: auto;
+    border-radius: 50px;
    
+}
+.texto{
+    background:#20232A;
+    padding: 10px;
+    border-radius: 50px;
+
 }
 
 .introduccion{
@@ -118,4 +125,19 @@ section {
     text-indent: 0px !important;
     text-align: start !important;
     text-align-last: start !important;
+}
+h3 {
+    display: block;
+    font-size: 1.50em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    color: #F4F4EF;
+}
+
+a{
+    color:#A01D23 ;
+    display: flexbox;
 }
