--- a/DOCUMENTACION/styles.css
+++ b/DOCUMENTACION/styles.css
@@ -39,6 +39,7 @@ ul {
     margin-inline-end: 0px;
     padding-inline-start: 40px;
 }
+head
 #navbar a {
     display: block;
     padding: 10px 30px;
