--- a/DOCUMENTACION/styles.css
+++ b/DOCUMENTACION/styles.css
@@ -1,20 +1,29 @@
-html, body {
-    min-width: 290px; /*Tamaño minimo del body*/
-    color: black; /* color de letra de todo el body*/
-    background-color: #7a4040;/* color de fondo*/
-    font-family: 'Open Sans', Arial, sans-serif; /*tipo de letra*/
-    line-height: 1.5; /* separacion entre lineas*/
-}   
+html,
+body {
+    min-width: 290px;
+    /*Tamaño minimo del body*/
+    color: black;
+    /* color de letra de todo el body*/
+    background-color: #693D3D;
+    /* color de fondo*/
+    font-family: 'Open Sans', Arial, sans-serif;
+    /*tipo de letra*/
+    line-height: 1.5;
+    /* separacion entre lineas*/
+}
 
 #navbar {
-    position: fixed; /* con esto el texto de la derecha queda al lado*/
-    min-width: 290px; 
+    position: fixed;
+    /* con esto el texto de la derecha queda al lado*/
+    min-width: 290px;
     top: 0px;
     left: 0px;
     width: 300px;
     height: 100%;
     border-right: solid;
-    border-color: rgba(196, 172, 172, 0.4);
+    border-color: black;
+    ;
+    background-color: #eccccc;
 }
 
 #titulo {
@@ -24,12 +33,14 @@ html, body {
     font-size: 1.8em;
     font-weight: thin;
 }
+
 #navbar ul {
     height: 88%;
     padding: 0;
     overflow-y: auto;
     overflow-x: hidden;
 }
+
 ul {
     display: block;
     list-style-type: disc;
@@ -39,21 +50,23 @@ ul {
     margin-inline-end: 0px;
     padding-inline-start: 40px;
 }
+
 #navbar a {
     display: block;
     padding: 10px 30px;
     color: black;
     text-decoration: none;
     cursor: pointer;
-    
+
 }
+
 #navbar li {
     color: black;
     border-top: 1px solid;
     list-style: none;
     position: relative;
     width: 100%;
-    border-color: rgba(231, 204, 204, 0.4);
+    border-color: #693D3D;
 }
 
 #main-doc {
@@ -65,23 +78,25 @@ ul {
 }
 
 #navbar a:hover {
-    background-color: #99c9ff;
-  }
+    background-color: #d37b66;
+}
 
-  #main-doc header {
+#main-doc header {
     text-align: left;
     margin: 0px;
     color: black;
-      
-    font-size:2em;
-    
-  }
-body{
+
+    font-size: 2em;
+
+}
+
+body {
     display: block;
     margin: 8px;
 }
-section{
-    display:block;
+
+section {
+    display: block;
 }
 
 html {
@@ -91,3 +106,59 @@ html {
 main {
     display: block;
 }
+
+.main-section {
+
+
+    border-bottom: 1px solid;
+    border-color: rgb(211, 155, 155);
+    margin-bottom: 20px;
+}
+
+
+
+h1 {
+    margin-top: -10px;
+    text-align: center;
+}
+
+#table1 {
+    height: 54px;
+
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+
+}
+
+#titulo1 {
+    height: 36px;
+    background-color:rgb(211, 155, 155);
+}
+
+.titulos1 {
+    width: 20%;
+    height: 36px;
+    text-align: center;
+
+}
+
+.temp1{
+    height: 18px;
+    background-color:rgb(238, 215, 215);
+  
+}
+
+.temp2{
+    height: 18px;
+    background-color:rgb(238, 185, 185);
+  
+}
+#textos {
+    width: 20%;
+    height: 18px;
+    text-align: center;
+   
+}
+
