--- a/TABLAS/styles.css
+++ b/TABLAS/styles.css
@@ -70,11 +70,14 @@ span[class~="sr-only"] {
   }
   
   table {
-    border-collapse: collapse;
-    border: 0;
+
+    border: 10px;
     width: 100%;
+
     position: relative;
     margin-top: 3rem;
+   
+
   }
   
   table caption {
@@ -84,6 +87,7 @@ span[class~="sr-only"] {
     position: absolute;
     top: -2.25rem;
     left: 0.5rem;
+     
   }
   
   tbody td {
