--- a/pinguino/styles.css
+++ b/pinguino/styles.css
@@ -68,6 +68,8 @@
     right:150px;
     transition: transform 4s ease-in-out 0ms;
     z-index: 5;
+ 
+
   }
   .huggy:active{
     transform: scale(-1);
@@ -298,4 +300,17 @@
     position: absolute;
     margin-top: -58px;
      height:calc(100vh - 300px);
+  }
+
+  @media (max-width:900px){
+    .mommy{
+      width: 50px;
+      position:absolute;
+      height: 50px;
+    }
+    .huggy{
+      width: 50px;
+      position:absolute;
+      height: 50px;
+    }
   }
